[tool.poetry]
name = "indo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "indo", from = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
openai = ">=1.93.0,<2.0.0"
streamlit = ">=1.46.1,<2.0.0"
pandas = ">=2.3.0,<3.0.0"
matplotlib = ">=3.10.3,<4.0.0"
langgraph = ">=0.5.0,<0.6.0"
langchain = {extras = ["openai"], version = "^0.3.0"}
langchain-openai = "^0.3.27"
google-auth = "^2.40.3"
gspread = "^6.2.1"
plotly = "^6.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
